chore: updated openapi gen
